<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="20dp">

    <EditText
        android:id="@+id/etNomeMeta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nome_meta"
        android:inputType="text" />

    <EditText
        android:id="@+id/etValorAlvoMeta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/valor_alvo"
        android:inputType="numberDecimal"
        android:layout_marginTop="12dp" />

    <EditText
        android:id="@+id/etDataLimiteMeta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/data_limite"
        android:inputType="date"
        android:layout_marginTop="12dp" />

</LinearLayout>
