<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="12dp"
    app:cardCornerRadius="16dp"
    app:cardElevation="6dp"
    android:layout_marginHorizontal="8dp">

    <LinearLayout
        android:id="@+id/containerItem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/categoria_padrao"
        android:padding="16dp"
        android:orientation="horizontal"
        android:gravity="center_vertical">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtCategoria"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/categoria"
            android:textStyle="bold"
            android:textColor="#000000"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/txtValor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/valor_negativo_padrao"
            android:textColor="#D32F2F"
            android:textSize="14sp"
            android:layout_marginTop="4dp" />

        <TextView
            android:id="@+id/txtData"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/formato_data"
            android:textColor="#888888"
            android:textSize="12sp"
            android:layout_marginTop="4dp" />
    </LinearLayout>

    <FrameLayout
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:background="@drawable/category"
        android:layout_marginStart="8dp">

        <ImageView
            android:id="@+id/imgIcone"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_gravity="center"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_launcher_foreground" />
    </FrameLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>